--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <!-- Bottom Navigation -->
         <nav class="bottom-nav">
-            <button class="nav-btn" id="navRates" onclick="showPage('rates')">
+            <button class="nav-btn" id="navRates">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M3 3v18h18" stroke="currentColor" stroke-width="2"/>
                     <path d="M6 15l4-4 3 3 5-7" stroke="currentColor" stroke-width="2"/>
@@ -124,7 +124,7 @@
                 <span>Rates</span>
             </button>
             
-            <button class="nav-btn active" id="navConvert" onclick="showPage('convert')">
+            <button class="nav-btn active" id="navConvert">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M7 10L12 15L17 10" stroke="currentColor" stroke-width="2"/>
                     <path d="M17 14L12 9L7 14" stroke="currentColor" stroke-width="2"/>
@@ -132,7 +132,7 @@
                 <span>Convert</span>
             </button>
             
-            <button class="nav-btn" id="navSettings" onclick="showPage('settings')">
+            <button class="nav-btn" id="navSettings">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
                     <path d="M12 1v6m0 6v6M23 12h-6m-6 0H1" stroke="currentColor" stroke-width="2"/>
@@ -143,7 +143,5 @@
     </div>
 
     <script type="module" src="app.js"></script>
-</body>
-</html>ipt>
 </body>
 </html>
