--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="convert-container">
                 <div class="currency-input-group">
                     <div class="currency-selector" id="from-currency">
-                        <img src="" alt="EUR" class="currency-icon" onerror="this.style.display='none'">
+                        <img src="" alt="" class="currency-icon">
                         <span class="currency-code">EUR</span>
                         <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <path d="M6 9l6 6 6-6"></path>
@@ -261,4 +261,4 @@
     <script src="js/utils.js"></script>
     <script src="js/app.js"></script>
 </body>
-</html>
+                </html>
