--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
     <script src="js/fonts.js"></script>
     <script src="js/colors.js"></script>
     <script src="js/settings.js"></script>
+    <script src="js/toolsidebar.js"></script>
     <script src="js/editor.js"></script>
     <script src="js/app.js"></script>
 </body>
