--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
                 </div>
             </div>
             
-            <!-- أدوات التحرير - صفين -->
+            <!-- أدوات التحرير - صف واحد فقط -->
             <div class="editor-toolbar-container">
-                <!-- الصف الأول -->
-                <div class="editor-toolbar editor-toolbar-top">
+                <div class="editor-toolbar">
                     <button class="tool-btn" onclick="toggleToolPanel('uploadPanel')">
                         <span class="material-symbols-outlined">upload</span>
                         <span>رفع</span>
@@ -84,18 +83,10 @@
                         <span class="material-symbols-outlined">border_style</span>
                         <span>حواف</span>
                     </button>
-                </div>
 
-                <!-- الصف الثاني -->
-                <div class="editor-toolbar editor-toolbar-bottom">
                     <button class="tool-btn" onclick="toggleToolPanel('fontPanel')">
                         <span class="material-symbols-outlined">brand_family</span>
                         <span>خط</span>
-                    </button>
-
-                    <button class="tool-btn" onclick="toggleToolPanel('sizePanel')">
-                        <span class="material-symbols-outlined">format_size</span>
-                        <span>حجم</span>
                     </button>
 
                     <button class="tool-btn" onclick="toggleToolPanel('colorPanel')">
@@ -186,15 +177,6 @@
                 </div>
             </div>
 
-            <!-- لوحة الحجم -->
-            <div id="sizePanel" class="tool-panel">
-                <div class="tool-section">
-                    <h4>حجم النص</h4>
-                    <input type="range" id="fontSize" min="20" max="120" value="48" class="size-slider">
-                    <span id="fontSizeDisplay">48</span>
-                </div>
-            </div>
-
             <!-- لوحة لون النص -->
             <div id="colorPanel" class="tool-panel horizontal-scroll-panel">
                 <div class="horizontal-controls color-scroll" id="colorGrid"></div>
@@ -274,7 +256,7 @@
 
             <div class="setting-card">
                 <p style="text-align: center; color: #86868b; font-size: 14px;">
-                    <span>الإصدار</span> 8.0 Final
+                    <span>الإصدار</span> 9.0 Final
                 </p>
             </div>
         </div>
